--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "file-saver": "^1.3.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vue-slider-component": "^2.4.7"
+    "vue-slider-component": "^2.4.7",
+    "ssri": "^5.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
